[package]
name = "can-adaptor-core"
version = "0.1.0"
authors = ["Ben Scholar <bbs27@case.edu>"]
edition = "2018"

[dependencies]
common = {path="../common", default-features = false}
env_logger = "0.8.2"
getset = "0.1.1"
heapless = "0.5.6"
log = "0.4.14"
postcard = "0.5.1"
quick-error = "2.0.0"
rusb = "0.7.0"
serde = "1.0.123"
tokio = "1.1.0"
