[package]
name = "adaptor-core"
version = "0.1.0"
authors = ["Ben Scholar <bbs27@case.edu>"]
edition = "2018"

[features]
threaded = []

[dependencies]
adaptor-common = {path="../adaptor-common", default-features = false}
env_logger = "0.8.2"
futures = "0.3.12"
getset = "0.1.1"
heapless = "0.5.6"
lazy_static = "1.4.0"
log = "0.4.14"
quick-error = "2.0.0"
rusb = "0.7.0"
serde = "1.0.123"
tokio = "1.1.0"

[dependencies.postcard]
version = "0.5"
default-features = false
features = ["use-std"]
